@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1368 2010-09-03 07:10:35 martin Exp $
+# $Id: CHANGES,v 1.1369 2010-09-03 10:45:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta3 ????-??-??
+ - 2010-09-03 Fixed bug#5789 - Use of uninitialized value $_ in Kernel/System/CustomerUser/LDAP.pm.
  - 2010-09-03 Fixed bug#5691 - Not possbible for a package to modify a file
     that belongs to another package.
  - 2010-09-02 Fixed bug#5860 - Tooltips are not displayed correct in Customer
